# serializer version: 1
# name: test_household_cmd_help[command_path0]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root pet [OPTIONS] COMMAND [ARGS]...
      
       Pet commands
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --help          Show this message and exit.                                  │
      ╰──────────────────────────────────────────────────────────────────────────────╯
      ╭─ Commands ───────────────────────────────────────────────────────────────────╮
      │ list            List pets                                                    │
      │ last-activity   Show last activity for a pet                                 │
      │ assign-devices  Fetch assigned devices for a pet                             │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_household_cmd_help[command_path1]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root pet list [OPTIONS]
      
       List pets
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --household-id        TEXT  Household ID. [env var: SUREPCCLI_HOUSEHOLD_ID]  │
      │ --help                      Show this message and exit.                      │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_household_cmd_help[command_path2]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root pet last-activity [OPTIONS]
      
       Show last activity for a pet
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --household-id        TEXT  Household ID. [env var: SUREPCCLI_HOUSEHOLD_ID]  │
      │ --pet-id              TEXT  Pet ID.                                          │
      │ --help                      Show this message and exit.                      │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_household_cmd_help[command_path3]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root pet assign-devices [OPTIONS]
      
       Fetch assigned devices for a pet
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --household-id        TEXT  Household ID. [env var: SUREPCCLI_HOUSEHOLD_ID]  │
      │ --pet-id              TEXT  Pet ID.                                          │
      │ --help                      Show this message and exit.                      │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_pet[pet_assign_devices]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Assigned devices for pet Maui (ID: 123455):
      device_id: [269654, 271836, 1181149]
      count: 3
    ''',
  })
# ---
# name: test_pet[pet_last_activity]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Last activity for pet Maui (ID: 123455):
      device_id: 269654
      time: 2025-09-16 19:42:53+00:00
    ''',
  })
# ---
# name: test_pet[pet_list]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Tag    | Name
      ---------------
      123455 | Maui
      629768 | Fionna
    ''',
  })
# ---
